yo/app/styles/video.css
.upload-form {
	padding-top: 10px;
}

.btn-file {
		position: relative;
		overflow: hidden;
		display: block;
		margin-bottom: 20px;
}

.btn-file input[type=file] {
		position: absolute;
		top: 0;
		right: 0;
		min-width: 100%;
		min-height: 100%;
		font-size: 100px;
		text-align: right;
		filter: alpha(opacity=0);
		opacity: 0;
		outline: none;
		background: white;
		cursor: inherit;
		display: block;
}

.form-container {
	margin: auto;
	padding-bottom: 50px;
}

.videogular {
	margin: auto;
	margin-bottom: 60px;
	margin-top: 0;
}

.videogular-container {
		max-width: 900px;
		margin-left: auto;
		margin-right: auto;
}

.videogular-fullscreen {
	margin-bottom: 0;
}

.videogular .controls-container {
	margin-top: 45px;
	background-color: rgba(0, 0, 0, 0.9);
}

/* I don't know of any way to update the controls-container class directly based on a javascript variable */
.videogular .controls-container-fullscreen > div:first-child{
	position: absolute;
	bottom: 0;
	margin-top: 0;
	background-color: rgba(0, 0, 0, 0.4);
}

.editing-tools {
		max-width: 900px;
		margin: auto;
		margin-top: 20px;
		margin-bottom: 20px;
}

.editing-tools .buttons {
		margin-top: 20px;
		text-align: center;
}

.ngrs-range-slider {
		margin-bottom: 20px;
}

.first-player-container {
	width: 50%;
}

.first-player-container .first-player {
	width: 200%;
	max-width: none;
}

.second {
		margin-top: -20px
}

.second-player-container {
	position: absolute;
	top: 0;
	width: 50%;
	height: 100%;
	left: 50%;
	overflow: hidden;
}

.second-player {
	/*position: absolute;*/
	/*top: 0;*/
	/*width: 100%;*/
	height: 100%;
	/*left: 50%;*/
	/*background-color: black;*/
}

.second-player .videogular {
	margin: 0;
	width: 200%;
}

.video-title {
	margin-top: 0;
	margin-bottom: 0;
}

.editing-tools .alert {
	margin-top: 20px;
}

.video-information {
	position: fixed;
}

.video-information .show-x {
	overflow-x: visible;
	padding: 45px;
	padding-top: 30px;
}

.video-information .nameInput {
	display: block;
}

.keep-on-top {
	position: relative;
	z-index: 999;
	padding-top: 300px;
	margin-top: -300px;
	/*background: url('https://lh3.googleusercontent.com/CB1q7HN0W8q09NAzbB6LRziZRzVHt1nlaC50uPkKErqOhGaN6GuIQpRnq5o0atLKXgCXPeb0nDTwqtpmhN5i=s0') 0 0 repeat;*/
}

.show-center {
	right: 50%;
}

.show-right {
	right: 100%;
}

.second-player .show-center {
	right: 25%;
}

.second-player .show-right {
	right: 50%;
}

/*.right-shift {
	left: -50%;
	z-index: 2;
}

.center-shift {
	left: 0;
}

.center-shift-left {
	left: -25%;
}

.center-shift-right {
	left: 25%;
}*/

.second-player video {
	/*margin-top: -2px;*/
	height: initial;
}

.multi-player {
		overflow: hidden;
}

.multi-player vg-media {
		position: relative;
}

.keep-on-top .checkbox {
	margin-top: -10px;
}

.video-information .btn-upload {
	margin-bottom: 10px;
}

.formatting-help {
	padding-left: 30px;
	padding-right: 30px;
}

.formatting-help li {
	margin-bottom: 7px;
}

.toolbar {
	margin-bottom: 2px;
}

videogular video-loop-button {
		display: table-cell;
		width: 50px;
		vertical-align: middle;
		text-align: center;
		cursor: pointer;
}

videogular video-loop-button a,
videogular video-loop-button a:hover,
videogular video-loop-button a:visited {
		color: white;
		text-decoration: none;
}

videogular div.video-loop-button {
		display: table-cell;
		width: 50px;
		vertical-align: middle;
		text-align: center;
		cursor: pointer;
}

videogular div.video-loop-button a,
videogular div.video-loop-button a:hover,
videogular div.video-loop-button a:visited {
		color: white;
		text-decoration: none;
}

videogular video-playback-button {
		display: table-cell;
		width: 70px;
		vertical-align: middle;
		text-align: center;
		cursor: pointer;
}

videogular video-playback-button a,
videogular video-playback-button a:hover,
videogular video-playback-button a:visited {
		color: white;
		text-decoration: none;
}

videogular div.video-playback-button {
		display: table-cell;
		width: 70px;
		vertical-align: middle;
		text-align: center;
		cursor: pointer;
}

videogular div.video-playback-button a,
videogular div.video-playback-button a:hover,
videogular div.video-playback-button a:visited {
		color: white;
		text-decoration: none;
}

videogular video-playback-button .dropdown-menu {
	background-color: rgba(0, 0, 0, 0.9);
}

videogular video-playback-button .dropdown-menu > li > a {
	color: white;
}

videogular video-dual-mode-button {
		display: table-cell;
		width: 50px
;    vertical-align: middle;
		text-align: center;
		cursor: pointer;
}

videogular video-dual-mode-button a,
videogular video-dual-mode-button a:hover,
videogular video-dual-mode-button a:visited {
		color: white;
		text-decoration: none;
}

videogular div.video-dual-mode-button {
		display: table-cell;
		width: 50px;
		vertical-align: middle;
		text-align: center;
		cursor: pointer;
}

videogular div.video-dual-mode-button a,
videogular div.video-dual-mode-button a:hover,
videogular div.video-dual-mode-button a:visited {
		color: white;
		text-decoration: none;
}

videogular video-canvas-overlay-button {
		display: table-cell;
		width: 50px;
		vertical-align: middle;
		text-align: center;
		cursor: pointer;
}

videogular video-canvas-overlay-button a,
videogular video-canvas-overlay-button a:hover,
videogular video-canvas-overlay-button a:visited {
		color: white;
		text-decoration: none;
}

videogular div.video-canvas-overlay-button {
		display: table-cell;
		width: 50px;
		vertical-align: middle;
		text-align: center;
		cursor: pointer;
}

videogular div.video-canvas-overlay-button a,
videogular div.video-canvas-overlay-button a:hover,
videogular div.video-canvas-overlay-button a:visited {
		color: white;
		text-decoration: none;
}

.videogular-container videogular vg-time-display {
	width: 100px;
}

@media screen and (min-width: 500px) {
	.btn-file {
		margin-left: auto;
		margin-right: auto;
		width: 180px;
	}
}

@media screen and (max-width: 990px) {
	.video-information {
		position: relative;
	}
}

